--- a/index.html
+++ b/index.html
@@ -223,6 +223,60 @@
               </button>
             </div>
           </div>
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/currency.jpg"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Currency Convertor</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/aRyan111112/Currency_Convertor'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://aryan111112.github.io/Currency_Convertor/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/guess.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Guess The Number</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/aRyan111112/guess_game'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://aryan111112.github.io/guess_game/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+
+
+
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -271,36 +325,36 @@
           <div class="seta">
             <h2>Set A:</h2>
             <ul class="ques">
-              <li><a href="">Solution 1</a></li>
-              <li><a href="">Solution 2</a></li>
-              <li><a href="">Solution 3</a></li>
+              <li><a href="https://www.youtube.com/watch?v=YS41bfey-ws&ab_channel=AryanVerma">Solution 1</a></li>
+              <li><a href="https://www.youtube.com/watch?v=nEcKmDcyldc&ab_channel=AryanVerma">Solution 2</a></li>
+              <li><a href="https://www.youtube.com/watch?v=vSamMeXW1HQ&ab_channel=AryanVerma">Solution 3</a></li>
             </ul>
           </div>
   
           <div class="seta">
             <h2>Set B:</h2>
             <ul class="ques">
-              <li><a href="">Solution 1</a></li>
-              <li><a href="">Solution 2</a></li>
-              <li><a href="">Solution 3</a></li>
+              <li><a href="https://www.youtube.com/watch?v=1vctI9JLI6o&ab_channel=AryanVerma">Solution 1</a></li>
+              <li><a href="https://www.youtube.com/watch?v=utdZ1L541CY&ab_channel=AryanVerma">Solution 2</a></li>
+              <li><a href="https://www.youtube.com/watch?v=Msf5qnlHwdU&ab_channel=AryanVerma">Solution 3</a></li>
             </ul>
           </div>
   
           <div class="seta">
             <h2>Set C:</h2>
             <ul class="ques">
-              <li><a href="">Solution 1</a></li>
-              <li><a href="">Solution 2</a></li>
-              <li><a href="">Solution 3</a></li>
+              <li><a href="https://www.youtube.com/watch?v=U-K768uQsHY&ab_channel=AryanVerma">Solution 1</a></li>
+              <li><a href="https://www.youtube.com/watch?v=1Rp4qRxrKho&ab_channel=AryanVerma">Solution 2</a></li>
+              <li><a href="https://www.youtube.com/watch?v=aMZ0kwWbPZM&ab_channel=AryanVerma">Solution 3</a></li>
             </ul>
           </div>
   
           <div class="seta">
             <h2>Set D:</h2>
             <ul class="ques">
-              <li><a href="">Solution 1</a></li>
-              <li><a href="">Solution 2</a></li>
-              <li><a href="">Solution 3</a></li>
+              <li><a href="https://www.youtube.com/watch?v=f1IHlfNqqxA&ab_channel=AryanVerma">Solution 1</a></li>
+              <li><a href="https://www.youtube.com/watch?v=NHnFti3h0F4&ab_channel=AryanVerma">Solution 2</a></li>
+              <li><a href="https://www.youtube.com/watch?v=8cs4A99urI4&ab_channel=AryanVerma">Solution 3</a></li>
             </ul>
           </div>
         </div>
@@ -314,21 +368,21 @@
       <div class="secondinternal">
         <h2>Second Internal:</h2>
         <ul class="ques">
-          <li><a href="">Solution 1</a></li>
-          <li><a href="">Solution 2</a></li>
-          <li><a href="">Solution 3</a></li>
-          <li><a href="">Solution 4</a></li>
-          <li><a href="">Solution 5x</a></li>
+          <li><a href="https://www.youtube.com/watch?v=XTb3qdNPgg8&ab_channel=AryanVerma">Solution 1</a></li>
+          <li><a href="https://www.youtube.com/watch?v=fyF0ycOcqys&ab_channel=AryanVerma">Solution 2</a></li>
+          <li><a href="https://www.youtube.com/watch?v=0o7yZFQ5j1A&ab_channel=AryanVerma">Solution 3</a></li>
+          <li><a href="https://www.youtube.com/watch?v=OpptKiHamck&ab_channel=AryanVerma">Solution 4</a></li>
+          <li><a href="https://www.youtube.com/watch?v=J3rcRUyz36U&ab_channel=AryanVerma">Solution 5</a></li>
         </ul>
       </div>
 
       <div class="thirdinternal">
         <h2>Third Internal:</h2>
         <ul class="ques">
-          <li><a href="">Solution 1</a></li>
-          <li><a href="">Solution 2</a></li>
-          <li><a href="">Solution 3</a></li>
-          <li><a href="">Solution 4</a></li>
+          <li><a href="https://www.youtube.com/watch?v=T7sUi5B4bIc&ab_channel=AryanVerma">Solution 1</a></li>
+          <li><a href="https://www.youtube.com/watch?v=Mlay5LMI5Fw&ab_channel=AryanVerma">Solution 2</a></li>
+          <li><a href="https://www.youtube.com/watch?v=hRW0iKVaBUw&ab_channel=AryanVerma">Solution 3</a></li>
+          <li><a href="https://www.youtube.com/watch?v=XO6noItvQys&ab_channel=AryanVerma">Solution 4</a></li>
         </ul>
       </div>
     </div>
